--- a/templates/index.html
+++ b/templates/index.html
@@ -18,36 +18,36 @@
     <div class="row posstion-relative overflow-hidden  d-flex flex-column w-100 mb-5 pb-5 mt-3 ">
       <div class="animated-text d-flex justify-content-center ">
         <span class="letter">
-          <img style="height: 5vw;" class="img-letter" src="./../media/letter/C-removebg-preview.png" alt="">
+          <img style="height: 5vw;" class="img-letter" src="{% static 'letter/C-removebg-preview.png' %}" alt="">
         </span>
         <span class="letter">
-          <img   style="height: 5vw;" class="img-letter" src="./../media/letter/H-removebg-preview.png" alt="">
+          <img   style="height: 5vw;" class="img-letter" src="{% static 'letter/H-removebg-preview.png' %}" alt="">
         </span>
         <span class="letter">
-          <img  style="height: 5vw;" class="img-letter" src="./../media/letter/U-removebg-preview.png" alt="">
+          <img  style="height: 5vw;" class="img-letter" src="{% static 'letter/U-removebg-preview.png' %}" alt="">
         </span>
         <span class="letter">
-          <img style="height: 5vw;" class="img-letter" src="./../media/letter/C-removebg-preview.png" alt="">
+          <img style="height: 5vw;" class="img-letter" src="{% static 'letter/C-removebg-preview.png' %}" alt="">
         </span>
         <span class="letter ms-5">
-          <img style="height: 5vw;" class="img-letter" src="./../media/letter/M-removebg-preview.png" alt="">
+          <img style="height: 5vw;" class="img-letter" src="{% static 'letter/M-removebg-preview.png' %}" alt="">
         </span>
         <span class="letter">
-          <img style="height: 5vw;" class="img-letter" src="./../media/letter/U-removebg-preview.png" alt="">
+          <img style="height: 5vw;" class="img-letter" src="{% static 'letter/U-removebg-preview.png' %}" alt="">
         </span>
         <span class="letter">
-          <img style="height: 5vw;" class="img-letter" src="./../media/letter/N-removebg-preview.png" alt="">
+          <img style="height: 5vw;" class="img-letter" src="{% static 'letter/N-removebg-preview.png' %}" alt="">
         </span>
         <span class="letter me-5">
-          <img style="height: 5vw;" class="img-letter" src="./../media/letter/G-removebg-preview.png" alt="">
+          <img style="height: 5vw;" class="img-letter" src="{% static 'letter/G-removebg-preview.png' %}" alt="">
         </span>
 
         </span>
         <span class="letter">
-          <img style="height: 5vw;" class="img-letter" src="./../media/letter/E.png" alt="">
+          <img style="height: 5vw;" class="img-letter" src="{% static 'letter/E.png' %}" alt="">
         </span>
         <span class="letter">
-          <img style="height: 5vw;" class="img-letter" src="./../media/letter/M-removebg-preview.png" alt="">
+          <img style="height: 5vw;" class="img-letter" src="{% static 'letter/M-removebg-preview.png' %}" alt="">
         </span>
 
     </div>
@@ -55,15 +55,15 @@
     <div class="row mt-5">
       <div id="drag-container">
         <div id="spin-container">
-          <img class="card-img" src="http://127.0.0.1:8000/media/images/3fda39c0b1e666b83ff7.jpg" alt="">
-          <img class="card-img" src="http://127.0.0.1:8000/media/images/5c89e5a26484b3daea95.jpg" alt="">
-          <img class="card-img" src="http://127.0.0.1:8000/media/images/8ead69ede3cb34956dda.jpg" alt="">
-          <img class="card-img" src="http://127.0.0.1:8000/media/images/18f1bd503676e128b867.jpg" alt="">
-          <img class="card-img" src="http://127.0.0.1:8000/media/images/46ef349ab0bc67e23ead.jpg" alt="">
-          <img class="card-img" src="http://127.0.0.1:8000/media/images/94fae45f6e79b927e068.jpg" alt="">
-          <img class="card-img" src="http://127.0.0.1:8000/media/images/3087ce5e45789226cb69.jpg" alt="">
-          <img class="card-img" src="http://127.0.0.1:8000/media/images/b1bb1f8998af4ff116be.jpg" alt="">
-          <img class="card-img" src="http://127.0.0.1:8000/media/images/c6fa76d1fef729a970e6.jpg" alt="">
+          <img class="card-img" src="{% static 'images/3fda39c0b1e666b83ff7.jpg' %}" alt="">
+          <img class="card-img" src="{% static 'images/5c89e5a26484b3daea95.jpg' %}" alt="">
+          <img class="card-img" src="{% static 'images/8ead69ede3cb34956dda.jpg' %}" alt="">
+          <img class="card-img" src="{% static 'images/18f1bd503676e128b867.jpg' %}" alt="">
+          <img class="card-img" src="{% static 'images/46ef349ab0bc67e23ead.jpg' %}" alt="">
+          <img class="card-img" src="{% static 'images/94fae45f6e79b927e068.jpg' %}" alt="">
+          <img class="card-img" src="{% static 'images/3087ce5e45789226cb69.jpg' %}" alt="">
+          <img class="card-img" src="{% static 'images/b1bb1f8998af4ff116be.jpg' %}" alt="">
+          <img class="card-img" src="{% static 'images/c6fa76d1fef729a970e6.jpg' %}" alt="">
           
         </div>
         <div id="ground">
